--- a/test.tt
+++ b/test.tt
@@ -68,7 +68,7 @@ function testarray() {
 	dim [ a 1 ];
 	call assert( =( $cmp( [ a 0 ] "a" ) 0 ), ${-} );
 	arr a = ${ 0, $str( "\"one" "\"" ), $tup( "\\two\\"2 ), "\063", ${ four(4) }, 84, 84 };
-	arr a = $parse( $arr( a ) );
+	arr a = $parse( $astr( a ) );
 	call assert( =( $len( a ) 7 ), ${-} );
 	call assert( =( [ a 0 ] 0 ), ${-} );
 	call assert( =( $cmp( [ a 1 ] "\"one\"" ) 0 ), ${-} );
