--- a/test.tt
+++ b/test.tt
@@ -553,6 +553,14 @@ function testpack() {
 	call assert( =( $cmp( $pack( a ), "\0\0\0\0\1\2\3\4" ) 0 ), ${-} );
 }
 
+function teststruct() {
+	call assert( =( struc 5 ), ${-} );
+	call assert( =( exten 7 ), ${-} );
+	call assert( =( struc.a 0 ), ${-} );
+	call assert( =( struc.e 4 ), ${-} );
+	call assert( =( exten.g 6 ), ${-} );
+}
+
 program test {
 	call hello();
 	call assert( =( testvoid() 0 ), ${-} );
@@ -587,5 +595,6 @@ program test {
 	call testquote();
 	call testunquote();
 	call testpack();
+	call teststruct();
 	print "Tests passed.";
 }
