--- a/test.tt
+++ b/test.tt
@@ -559,6 +559,7 @@ function teststruct() {
 	call assert( =( struc.a 0 ), ${-} );
 	call assert( =( struc.e 4 ), ${-} );
 	call assert( =( exten.g 6 ), ${-} );
+	call assert( =( $len( $new( exten ) ) 7 ), ${-} );
 }
 
 function testfuncref() {
